# PyPantograph

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  PyPantograph  README.md  SNAP.md  build.py  custom_build.py  main_krbtmux_bm.sh  pyproject.toml  pytest.ini  test_sglang.py  test_vllm.py
.github/workflows/: docs.yaml  test.yaml
data/: test.jsonl
data/debug/toy_example1_dsp/: dsp_debug3_sf.json
docs/: _config.yml  _toc.yml  agent-search.ipynb  api-data.rst  api-expr.rst  api-search.rst  api-server.rst  data.ipynb  drafting.ipynb  drafting.md  goal.ipynb  goal.md  intro.md  proof_search.md  search.md  setup.md
examples/: README.md  aesop.py  all.ipynb  compile-tactics.py  data.py  sketch.py
examples/Example/: Example.lean  lake-manifest.json  lakefile.lean
examples/lean4_dsp/: dsp_for_lean4.py
examples/lean4_dsp/lean_src_proj/: README.md  lake-manifest.json
examples/lean4_dsp/lean_src_proj/MATH/: limit_linear_khan_academy.lean
examples/lean4_dsp/lean_src_proj/MyProject/: Test.lean
examples/lean4_dsp/solve/: dsp_lean_prompts.py  readme.md
examples_search/: miniF2F_search.py  valid.jsonl
examples_search/Example/: Example.lean  lake-manifest.json  lakefile.lean
experiments/: ARTEFACT.md  Dockerfile  README.md  miniF2F_search.py  test.jsonl
experiments/Example/: lake-manifest.json  lakefile.lean  lean-toolchain
experiments/dsp/: README.md  all-4o.sh  all-o1.sh  dsp_for_lean4.py  early.sh  main.py  pack-artefact.sh  plot-4o.sh  plot-o1.sh  plot.py  ref-plots.sh
experiments/dsp/debug/: khan_debug.jsonl  mathematica_debug.jsonl
experiments/dsp/debug/toy_example1_dsp/: dsp_debug4_sf.json
experiments/dsp/lean_src_proj/: LeanSrcProj.lean  lake-manifest.json  lakefile.lean
experiments/dsp/lean_src_proj/MATH/: algebra_379.lean  algebra_4.lean  algebra_683.lean  test_algebra_1json.lean
experiments/dsp/lean_src_proj/MyProject/: basic_nats.lean  playground.lean
experiments/dsp/lean_src_proj/PlayGround/: aesop_pg.lean
experiments/dsp/lean_src_proj/Putnam_in_lean4/: putnam_2023.lean  readme.md
experiments/dsp/solve/: data.py  dsp_lean_prompts.py  dsp_prompt_draft_4_isabelle.py  prompts.py  prove.py
experiments/minif2f/: README.md  main.py  test.jsonl  valid.jsonl
experiments/minif2f/MiniF2F/: MiniF2F.lean  lake-manifest.json  lakefile.lean  lean-toolchain
experiments/minif2f/model/: gen_tactic.py  llm_agent.py  options.py
output/test/30-05-2024-12-29/: results__gpt-3.5-turbo__0.json
pantograph/: .gitignore  __init__.py  compiler.py  data.py  expr.py  gen_tactic.py  proof_search.py  search.py  search_llm.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_minif2f.py  test_sample.py  test_server.py  test_special_tactics.py  utils.py
(+37 files in other folders)
