[tool.poetry]
name = "pantograph"
version = "0.2.25"
description = "A machine-to-machine interaction system for Lean"
authors = ["Leni Aniva <v@leni.sh>"]
license = "Apache-2.0"
readme = "README.md"

include = [
    { path = "pantograph/pantograph-repl", format = ["sdist", "wheel"] },
    { path = "pantograph/lean-toolchain", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
pexpect = "^4.9.0"
python = ">=3.9.0"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.group.doc]
optional = true
[tool.poetry.group.doc.dependencies]
notebook = "^7.2.1"
jupyter-book = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
